--- a/jonas-budget-app/style.css
+++ b/jonas-budget-app/style.css
@@ -180,3 +180,106 @@ body {
 }
 
 .add__btn:focus { outline: none; }
+
+
+/*** LISTS ***/
+
+/***** LISTS *****/
+.container {
+    width: 100rem;
+    margin: 6rem auto;
+    display: flex;
+}
+
+.income,
+.expenses {
+    display: flex;
+    flex-direction: column;
+}
+
+.income {
+    width: 47.5rem;
+    margin-right: 5rem;
+}
+
+.expenses {
+    width: 47.5rem;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+}
+
+.icome__title { color: #28B9B5; }
+.expenses__title { color: #FF5049; }
+
+.item {
+    padding: 1.3rem;
+    border-bottom: 1px solid #e7e7e7;
+    display: flex;
+}
+
+.item:first-child { border-top: 1px solid #e7e7e7; }
+.item:nth-child(even) { background-color: #f7f7f7; }
+
+.item__description {
+    flex-grow: 1;
+}
+
+.item__value {
+    transition: transform 0.3s;
+}
+
+.item__percentage {
+    margin-left: 2rem;
+    transition: transform 0.3s;
+    font-size: 1.1rem;
+    background-color: #FFDAD9;
+    padding: .3rem;
+    border-radius: 3px;
+    width: 3.2rem;
+    text-align: center;
+}
+
+.income .item__value,
+.income .item__delete--btn {
+    color: #28B9B5;
+}
+
+.expenses .item__value,
+.expenses .item__percentage,
+.expenses .item__delete--btn {
+    color: #FF5049;
+}
+
+.item__delete--btn {
+    font-size: 2.2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+    display: none;
+}
+
+.item__delete--btn:focus { outline: none; }
+.item__delete--btn:active { transform: translateY(2px); }
+
+.item:hover .item__delete--btn { display: block; }
+.item:hover .item__value { transform: translateX(-2rem); }
+.item:hover .item__percentage { transform: translateX(-2rem); }
+
+
+.unpaid {
+    background-color: #FFDAD9 !important;
+    cursor: pointer;
+    color: #FF5049;
+
+}
+
+.unpaid .item__percentage { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1); }
+.unpaid:hover .item__description { font-weight: 900; }
